[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo/visuals/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://demo/scripts/hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -442.5
margin_top = -115.0
margin_right = 442.5
margin_bottom = -23.0
custom_constants/separation = 15

[node name="2DBtn" type="Button" parent="HBoxContainer"]
margin_right = 209.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "2D SCENE"

[node name="3DBtn" type="Button" parent="HBoxContainer"]
margin_left = 224.0
margin_right = 433.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "3D SCENE"

[node name="SmoothBtn" type="Button" parent="HBoxContainer"]
margin_left = 448.0
margin_right = 660.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "SMOOTH TRANSITION"

[node name="SimpleBtn" type="Button" parent="HBoxContainer"]
margin_left = 675.0
margin_right = 885.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "SIMPLE TRANSITION"

[connection signal="pressed" from="HBoxContainer/2DBtn" to="." method="_on_2DBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/3DBtn" to="." method="_on_3DBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/SmoothBtn" to="." method="_on_SmoothBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/SimpleBtn" to="." method="_on_SimpleBtn_pressed"]
